--- a/install/0-install.mdx
+++ b/install/0-install.mdx
@@ -1,1 +1,9 @@
 # Installing NumPower
+
+This page provides instructions for installing NumPower, a powerful numerical computing library for PHP inspired
+by the functionality of NumPy in Python. NumPower enables efficient array operations, mathematical functions, and
+tools for manipulating and analyzing numerical data in PHP.
+
+NumPower is implemented as a PHP extension, which requires a compilation process to install it in your PHP environment.
+There are two methods for installing NumPower: using a Docker image or compiling the extension
+from the source.
