feat: Updated theme and base page for already implemented methods

--- a/api/linear-algebra/ndarray-svd.mdx
+++ b/api/linear-algebra/ndarray-svd.mdx
@@ -1,1 +1,16 @@
 # NDArray::svd
+
+```php
+public static function svd($a);
+```
+
+---
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
