--- a/api/mathematical-functions/ndarray-exp2.mdx
+++ b/api/mathematical-functions/ndarray-exp2.mdx
@@ -6,3 +6,12 @@ import TabItem from '@theme/TabItem';
 ```php
 public static function exp2($a);
 ```
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
