--- a/api/mathematical-functions/ndarray-log10.mdx
+++ b/api/mathematical-functions/ndarray-log10.mdx
@@ -6,3 +6,14 @@ import TabItem from '@theme/TabItem';
 ```php
 public static function log10($a);
 ```
+
+---
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
