--- a/api/mathematical-functions/ndarray-multiply.mdx
+++ b/api/mathematical-functions/ndarray-multiply.mdx
@@ -21,6 +21,16 @@ public static function multiply($a, $b);
 
 - The multiplication of `$a` and `$b` element-wise
 
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
+
+
 ## Examples
 
 <Tabs>
