--- a/api/mathematical-functions/ndarray-negative.mdx
+++ b/api/mathematical-functions/ndarray-negative.mdx
@@ -1,11 +1,10 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
-# NDArray::logb
+# NDArray::negative
 
 ```php
-public static function logb($a);
+public static function negative($a);
 ```
+
+---
 
 ## Notes
 
