--- a/api/mathematical-functions/ndarray-prod.mdx
+++ b/api/mathematical-functions/ndarray-prod.mdx
@@ -23,7 +23,7 @@ public static function prod($a, $axis = NULL);
 
 #### `NDArray`
 
-- Array with the same shape of `$a`. If `$axis` is not NULL, the specified axis is removed.
+- The product of `$a`. If `$axis` is not NULL, the specified axis is removed.
 
 ## Examples
 
