--- a/api/mathematical-functions/ndarray-trunc.mdx
+++ b/api/mathematical-functions/ndarray-trunc.mdx
@@ -1,10 +1,10 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# NDArray::logb
+# NDArray::trunc
 
 ```php
-public static function logb($a);
+public static function trunc($a);
 ```
 
 ## Notes
