--- a/api/linear-algebra/ndarray-matmul.mdx
+++ b/api/linear-algebra/ndarray-matmul.mdx
@@ -1,1 +1,16 @@
 # NDArray::matmul
+
+```php
+public static function matmul($a, $b);
+```
+
+---
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
