--- a/api/logic/ndarray-equal.mdx
+++ b/api/logic/ndarray-equal.mdx
@@ -1,11 +1,10 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
-# NDArray::logb
+# NDArray::equal
 
 ```php
-public static function logb($a);
+public static function equals($a, $b);
 ```
+
+---
 
 ## Notes
 
