--- a/api/mathematical-functions/ndarray-add.mdx
+++ b/api/mathematical-functions/ndarray-add.mdx
@@ -9,17 +9,34 @@ public static function add($a, $b);
 
 > Add arguments element-wise
 
+---
+
 ## Parameters
 
 #### `$a` `$b`
   - **Type** - NDArray | array | scalar
   - The arrays to be added, `$a` and `$b` must be of the same shape.
 
+---
+
 ## Return
 
 #### `NDArray`
 
 - The sum of `$a` and `$b`
+
+---
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
+
+---
 
 ## Examples
 
