--- a/api/mathematical-functions/ndarray-ceil.mdx
+++ b/api/mathematical-functions/ndarray-ceil.mdx
@@ -1,10 +1,10 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# NDArray::logb
+# NDArray::ceil
 
 ```php
-public static function logb($a);
+public static function ceil($a);
 ```
 
 ## Notes
