--- a/api/mathematical-functions/ndarray-clip.mdx
+++ b/api/mathematical-functions/ndarray-clip.mdx
@@ -1,10 +1,10 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# NDArray::logb
+# NDArray::clip
 
 ```php
-public static function logb($a);
+public static function clip($a, $min, $max);
 ```
 
 ## Notes
