--- a/api/mathematical-functions/ndarray-cos.mdx
+++ b/api/mathematical-functions/ndarray-cos.mdx
@@ -1,10 +1,10 @@
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# NDArray::logb
+# NDArray::cos
 
 ```php
-public static function logb($a);
+public static function cos($a);
 ```
 
 ## Notes
