--- a/api/mathematical-functions/ndarray-min.mdx
+++ b/api/mathematical-functions/ndarray-min.mdx
@@ -1,1 +1,16 @@
 # NDArray::min
+
+```php
+public static function min($a);
+```
+
+---
+
+## Notes
+
+:::tip
+
+#### GPU SUPPORTED
+This operation is supported by GPU (VRAM) and contains a custom CUDA kernel.
+
+:::
