--- a/api/initializers/ndarray-zeros.mdx
+++ b/api/initializers/ndarray-zeros.mdx
@@ -1,1 +1,21 @@
 # NDArray::zeros
+
+```php
+public static function zeros(array $shape): NDArray;
+```
+The function creates a new NDArray with the specified shape, filled with zeros.
+
+---
+
+## Parameters
+
+### `$shape`
+> **Type** `array[long,]`
+>- The shape parameter can be a sequence of integers, indicating the dimensions of the array
+
+---
+
+## Return
+
+> **Type** - NDArray
+>- Return an array of shape `$shape` filled with zeros.
