--- a/api/linear-algebra/ndarray-cond.mdx
+++ b/api/linear-algebra/ndarray-cond.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::cond
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function cond($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
