--- a/api/linear-algebra/ndarray-lu.mdx
+++ b/api/linear-algebra/ndarray-lu.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::lu
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function lu($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
