--- a/api/linear-algebra/ndarray-outer.mdx
+++ b/api/linear-algebra/ndarray-outer.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::outer
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function outer($a, $b);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
