--- a/api/logic/ndarray-equal.mdx
+++ b/api/logic/ndarray-equal.mdx
@@ -1,8 +1,10 @@
 # NDArray::equal
 
 ```php
-public static function equals($a, $b);
+public static function equal($a, $b);
 ```
+Return `($a == $b)` element-wise.
+
 
 ---
 
