--- a/api/mathematical-functions/ndarray-min.mdx
+++ b/api/mathematical-functions/ndarray-min.mdx
@@ -1,8 +1,9 @@
 # NDArray::min
 
 ```php
-public static function min($a);
+public static function min(NDArray|array|scalar $a): double;
 ```
+Finds the minimum value in the NDArray.
 
 ---
 
