--- a/api/statistics/ndarray-average.mdx
+++ b/api/statistics/ndarray-average.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::average
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function average($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
