--- a/api/statistics/ndarray-median.mdx
+++ b/api/statistics/ndarray-median.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::median
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function median($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
