--- a/api/statistics/ndarray-std.mdx
+++ b/api/statistics/ndarray-std.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::std
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function std($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
