--- a/api/statistics/ndarray-variance.mdx
+++ b/api/statistics/ndarray-variance.mdx
@@ -1,9 +1,8 @@
-# NDArray::max
+# NDArray::variance
 
 ```php
-public static function max(NDArray|array|scalar $a): double;
+public static function variance($a);
 ```
-Finds the maximum value in the NDArray.
 
 ---
 
