fix: Broken links

--- a/api/linear-algebra/ndarray-dot.mdx
+++ b/api/linear-algebra/ndarray-dot.mdx
@@ -11,9 +11,9 @@ varies depending on the dimensions and shapes of the input arrays:
 
 - If both `$a` and `$b` are 1-D arrays, the dot product is computed as the inner product of the vectors.
 - If both `$a` and `$b` are 2-D arrays, the dot product is computed as the matrix multiplication
-(See <a href="/api/linear-algebra/ndarray-matmul">NDArray::matmul</a>).
+(See <a href="#">NDArray::matmul</a>).
 - If either `$a` or `$b` is a 0-D (scalar) array, the dot product is equivalent to element-wise multiplication.
-(See <a href="/api/mathematical-functions/ndarray-multiply">NDArray::multiply</a>).
+(See <a href="#">NDArray::multiply</a>).
 - If `$a` is an N-D array and `$b` is a 1-D array, the dot product is computed as the
 sum product over the last axis of `$a` and `$b`.
 
