--- a/api/manipulation/ndarray-copy.mdx
+++ b/api/manipulation/ndarray-copy.mdx
@@ -9,7 +9,7 @@ Create a copy of array `$a`.
 Default = NULL, copy on the same device as `$a`
 
 - **0** - CPU copy (same as `$a->cpu()`);
-- **1** - GPU copu (same as `$a->gpu()`);
+- **1** - GPU copy (same as `$a->gpu()`);
 
 ---
 
