--- a/tensor/intro/4-autograd-model.mdx
+++ b/tensor/intro/4-autograd-model.mdx
@@ -90,8 +90,8 @@ public function forward(Tensor $x, Tensor $y): array
     $x = $x->matmul($this->weights_output_layer) + $this->output_bias;
     $x = activation::sigmoid($x); // Sigmoid Activation
 
-    // Mean Squared Error
-    $loss = loss::MeanSquaredError($x, $y, name: 'loss');
+    // Binary Cross Entropy Loss
+    $loss = loss::BinaryCrossEntropy($x, $y, name: 'loss');
     return [$x, $loss];
 }
 ```
